# orchid

./: .gitignore  Dockerfile  bun.lockb  migrations.toml  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
assets/: script.js
frontend/: tsconfig.node.json  vite.config.ts
frontend/src/: index.css
frontend/src/components/: ChatBox.tsx  ChatMessage.tsx  SocketProvider.tsx  StreamLayout.tsx
frontend/src/lib/: bottomBoxTypes.ts  layoutUpdateTypes.ts
frontend/src/routes/: index.lazy.tsx
frontend/src/stores/: chatStore.ts  layoutItemsStore.ts  webSocketSvc.ts
orchid-core/: Cargo.toml  package.json
orchid-core/assets/: index.html
orchid-core/assets/assets/: index-CYRCawG8.js  index-U7-wJsi7.css  index.lazy-DAHtHYYQ.js
orchid-core/src/: db.rs  err.rs  main.rs  ws.rs
orchid-core/src/twitch/: mod.rs
orchid-core/src/twitch/chat/: mod.rs
orchid-core/src/twitch/emote/: ffz.rs  firstparty.rs  mod.rs
orchid-web/: package.json
orchid-web/src/: index.css  main.tsx
orchid-web/src/components/: ChatBox.tsx  StreamLayout.tsx  VideoCapture.tsx
orchid-web/src/lib/: exampleMsgs.ts
orchid-web/src/routes/: __root.tsx
orchid-web/src/stores/: chatStore.ts  layoutItemsStore.ts  webSocketSvc.ts
src/: main.rs  ws.rs
src/twitch/: chat.rs  mod.rs
src/twitch/chat/: manager.rs  message.rs  mod.rs
src/twitch/emote/: ffz.rs  mod.rs
